<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="short_app_name">Build</string>
    
    <!-- Strings for the Main Menu -->
    <string name="app_name">APP NAME</string>
    <string name="title_activity_menu_screen">APP NAME</string>
    <string name="title_activity_preview_demo">PreviewDemo</string>
    <string name="mainprompt">What do you want to do?</string>
    <string name="BrowseProjects">View My Projects</string>
    
    <!-- Registeration Activity -->
    <string name="email">Email</string>
    <string name="email_hint">example@abc.com</string>
    <string name="password_confirmation">Confirm Password</string>
    <string name="title_activity_register">Registration</string>
	
    <!-- Share Activity -->
    <string name="title_activity_share">APP NAME</string>
    <string name="activity_share">Upload Media</string>
    <string name="project">Project</string>
    <string name="upload">Upload</string>
    
    <!-- Strings for Image Preview -->
    <string name="okay_imagePreview">Okayd the Image Previewed</string>
    <string name="delete_imagePreview">Deleted the Image Previewed</string>
    <string name="hello">Hello World, PhotoIntentActivity!</string>
    <string name="takePicture">Take a Photo</string>
    <string name="cannot">Cannot</string>
    <string name="album_name">CameraSample</string>
    <string name="menu_settings">Settings</string>
    <string name="photoDescription">Photo Description</string>
    <string name="note">type notes here</string>
    <string name="projectNameLabel">Project Name</string>
    <string name="stepNameLabel">Step</string>
    <string name="tagNameLabel">Tags</string>
    <string name="share">Share</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="editNameHint">type new project name</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_instructable_main">InstructableMain</string>

    <!-- All Project Display -->
    <string name="project_description_allProjecDisplay">Project Description</string>
    <string name="add_project_all_project_display">+ Add New Project</string>
    <string name="title_activity_project_screen">ProjectScreen</string>
    <string name="title_activity_post_project">PostProject</string>
    <string name="add_project_name_allProjectDisplay">Add</string>
    <string name="cancel_project_name_allProjectDisplay">Cancel</string>

    <!-- Post Project Display -->
    <string name="drag_image_here">drag image here</string>
    <string name="publish_button">Publish</string>

    <string-array name="spinner_post_project">
        <item>Publish</item>
        <item>Save as Draft</item>
        <item>Preview</item>
    </string-array>

    <!-- Label Display -->
    <string name="title_activity_label_display">LabelDisplay</string>
    <string name="label_name_hint">Label Name</string>
    <string name="label_description">Label Color</string>
    <string name="delete_label">Delete Label</string>
    <!-- Step Display -->
    <string name="title_activity_step_display">StepDisplay</string>
    <string name="step_name_hint">Step Name</string>
    <string name="step_description">Step Description</string>
    <string name="project_description">Project Description</string>
    <string name="project_overview_description_hint">Type a description of your project here!</string>
    <string name="description_hint">Type a description of your step here!</string>
    <string name="add_image">+ Add Media</string>
    <string name="delete_step">Delete Step</string>
    <string name="built">Built?</string>
    
    <!-- Project Dialog Box -->
    <string name="projectNameDirections">Name your new project</string>
    
    <!-- Action Bar Sherlock Menu Items -->
    <string name="refresh">Refresh</string>
    <string name="logout">Logout</string>
    <string name="list_view">List View</string>
    <string name="map_view">Map View</string>
   	<string name="edit">Edit</string>
   	
    <!-- Context Menu -->
    <string name="edit_step_post_project">Edit Step</string>
    <string name="delete_step_post_project">Delete Step</string>
    <string name="title_activity_splash_screen">Splash Screen</string>
    <string name="project_title">Project Title</string>
    <string name="project_overview">Project Description</string>
    <string name="project_step">Project Step Information</string>
    <string name="drag_drop">Drag and Drop</string>
    <string name="project_name">Project Name</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="pick_date">DATE</string>
    <string name="new_step">+ New Step</string>
    <string name="pick_time">TIME</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="welcome">WelcomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="published_on">Published On</string>
    <string name="submit">Submit</string>
    <string name="last_step">Check if your project is now complete</string>
    <string name="add_new_step">+ Add New Step</string>
    <string name="add_new_label">+ Add New Label</string>
    <string name="edit_project">Edit project</string>
    <string name="delete_project">Delete project</string>
    <string name="no_internet">No internet available. Check your connection settings and refresh.</string>
    <string name="no_time">00:00</string>
    <string name="current_date">Current Time</string>
    <string name="stepLabel">STEPS</string>
    <string name="labelLabel">LABELS</string>
</resources>