<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <LinearLayout
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="35sp"
            android:layout_height="35sp"
            android:background="@drawable/logo" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_weight="0.44"
            android:text="@string/title_activity_share"
            android:textColor="@color/blue"
            android:textSize="23sp" />
        
    </LinearLayout>
    
    <View 
         android:layout_width="fill_parent"
		 android:layout_height="2dip"
		 android:layout_marginTop="5dp"
		 android:background="@color/blue"            
    />

    <HorizontalScrollView
        android:id="@+id/share_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/whitegrey"
        android:padding="5dp"
        android:layout_margin="@dimen/activity_horizontal_margin" >

        <LinearLayout
            android:id="@+id/share_images_holder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@color/whitegrey"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        android:layout_margin="@dimen/activity_horizontal_margin"
        >
		    <TextView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/project"
		        android:textColor="@color/darkgrey"
		        android:textSize="15sp"
		        android:textAllCaps="true" />
		    
		    <Spinner
		        android:id="@+id/project_select"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" />
		    
	</LinearLayout>

    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:background="@color/whitegrey"
        android:orientation="vertical"
        android:layout_margin="@dimen/activity_horizontal_margin"
        >
    
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:paddingTop="15dp"
	        android:text="@string/stepNameLabel"
	        android:textColor="@color/darkgrey"
	        android:textSize="15sp"
	        android:textAllCaps="true" />
		    
	    
	    <Spinner
	        android:id="@+id/step_select"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" />
    </LinearLayout>

   
    <View 
         android:layout_width="fill_parent"
		 android:layout_height="1dip"
		 android:layout_marginTop="20dp"
		 android:background="@color/darkgrey"            
    />
    
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:orientation="horizontal"
         >

        <Button
            android:id="@+id/share_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:text="@string/cancel" />
        
        <View
  		  	android:layout_width="1dip"
    		android:layout_height="fill_parent"
    		android:background="@color/darkgrey"
		/>

        <Button
            android:id="@+id/share_ok"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.49"
            android:text="@string/upload" />
    </LinearLayout>

</LinearLayout>